--- a/package.json
+++ b/package.json
@@ -20,18 +20,53 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/background-geolocation": "^4.17.0",
     "@ionic-native/core": "~4.17.0",
+    "@ionic-native/geolocation": "^4.17.0",
+    "@ionic-native/native-geocoder": "^4.17.0",
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
     "@ionic/storage": "2.2.0",
+    "angularfire2": "^5.1.0",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.2.5",
+    "cordova-plugin-nativegeocoder": "^3.1.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "firebase": "^5.5.9",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "leaflet": "^1.3.4",
+    "leaflet-tilelayer-mbtiles-ts": "^1.4.9",
+    "mapbox-gl": "^0.51.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.0",
+    "@types/leaflet": "^1.2.14",
     "typescript": "~2.6.2"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-nativegeocoder": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-geolocation": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
