--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "leaflet": "^1.3.4",
     "leaflet-tilelayer-mbtiles-ts": "^1.4.9",
     "mapbox-gl": "^0.51.0",
+    "moment": "^2.22.2",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -63,7 +64,9 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
+      }
     },
     "platforms": [
       "android"
